# rust_snippets

./: Cargo.toml
src/snippets/: generics.rs  threading.rs
src/snippets/memory_safety/: borrowing.rs  lifetime.rs  ownership.rs
