[package]
name = "rust_snippets"
version = "0.1.0"
authors = ["Georgi Goranov <georgi.goranov3@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"

[[bin]]
name = "threading"
path = "src/snippets/threading.rs"

[[bin]]
name = "generics"
path = "src/snippets/generics.rs"

[[bin]]
name = "borrowing"
path = "src/snippets/memory_safety/borrowing.rs"

[[bin]]
name = "ownership"
path = "src/snippets/memory_safety/ownership.rs"

